--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <meta property="og:site_name" content="RagnarokShop">
     <meta property="og:locale" content="zh_TW">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>RagnarokShopV3 - 創造屬於你的仙境傳說</title>
+    <title>RagnarokShopV3 - สร้างแร็กนาร็อคของคุณเอง</title>
   </head>
 
   <body>
